--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ jedi==0.19.2
 jupyter_client==8.6.3
 jupyter_core==5.8.1
 matplotlib-inline==0.1.7
+narwhals==1.48.1
 nest-asyncio==1.6.0
 numpy==2.2.6
 packaging==25.0
@@ -17,6 +18,7 @@ pandas==2.3.1
 parso==0.8.4
 pexpect==4.9.0
 platformdirs==4.3.8
+plotly==6.2.0
 prompt_toolkit==3.0.51
 psutil==7.0.0
 ptyprocess==0.7.0
