--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,22 @@
 asttokens==3.0.0
+attrs==25.3.0
 comm==0.2.3
 debugpy==1.8.15
 decorator==5.2.1
 exceptiongroup==1.3.0
 executing==2.2.0
+fastjsonschema==2.21.1
 ipykernel==6.30.0
 ipython==8.37.0
 jedi==0.19.2
+joblib==1.5.1
+jsonschema==4.25.0
+jsonschema-specifications==2025.4.1
 jupyter_client==8.6.3
 jupyter_core==5.8.1
 matplotlib-inline==0.1.7
 narwhals==1.48.1
+nbformat==5.10.4
 nest-asyncio==1.6.0
 numpy==2.2.6
 packaging==25.0
@@ -27,8 +33,13 @@ Pygments==2.19.2
 python-dateutil==2.9.0.post0
 pytz==2025.2
 pyzmq==27.0.0
+referencing==0.36.2
+rpds-py==0.26.0
+scikit-learn==1.7.1
+scipy==1.15.3
 six==1.17.0
 stack-data==0.6.3
+threadpoolctl==3.6.0
 tornado==6.5.1
 traitlets==5.14.3
 typing_extensions==4.14.1
